Remove usage of deprecated URL constructor
Although those URL constructors are only deprecated with Java 20, this
already removes their usage.